[gd_scene load_steps=11 format=4 uid="uid://cvde2fc86wdev"]

[ext_resource type="Script" uid="uid://bfnbval0ejfrl" path="res://scripts/options.gd" id="1_yjkok"]
[ext_resource type="Texture2D" uid="uid://clk4wt4skrrfp" path="res://assets/team_assets/tileset/dungeon_tilesheet_resized.png" id="2_2iy26"]
[ext_resource type="FontFile" uid="uid://cufjgh3gelqqk" path="res://assets/old_london/OldLondon.ttf" id="3_2iy26"]
[ext_resource type="Texture2D" uid="uid://vf1odus58sh8" path="res://assets/team_assets/tileset/DraculaThrone.png" id="3_kv8mn"]
[ext_resource type="Texture2D" uid="uid://dba2d67bg78t" path="res://assets/team_assets/options menu/how_top_play_final.png" id="5_qfjae"]
[ext_resource type="Texture2D" uid="uid://dmsisvwpdrrmu" path="res://assets/team_assets/options menu/credits_final.png" id="6_y7lp4"]
[ext_resource type="Texture2D" uid="uid://b3r2f4jj4exfj" path="res://assets/team_assets/options menu/story_final.png" id="7_obcvb"]
[ext_resource type="AudioStream" uid="uid://ce4c0jx1g7oqv" path="res://assets/team_assets/music/Donalds dungeon Dive Title screen.wav" id="8_y7lp4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kv8mn"]
texture = ExtResource("2_2iy26")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
9:3/0 = 0
10:3/0 = 0
9:4/0 = 0
10:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0

[sub_resource type="TileSet" id="TileSet_1sggn"]
sources/0 = SubResource("TileSetAtlasSource_kv8mn")

[node name="options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 15.0
offset_right = 7.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjkok")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, -23)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAAAAAAAAAAGAAAAAAABAAAAAAAGAAAAAAACAAAAAAAGAAAAAAADAAAAAAAGAAAAAAAEAAAAAAAGAAAAAAAFAAAAAAAGAAAAAAAGAAAAAAAGAAAAAAAHAAAAAAAGAAAAAAAIAAEAAAAGAAAAAAAJAAEAAAAGAAAAAAAKAAEAAAAGAAAAAAALAAEAAAAGAAAAAAAMAAEAAAAGAAAAAAANAAEAAAAGAAAAAAAOAAEAAAAGAAAAAAAPAAEAAAAGAAAAAAAQAAEAAAAGAAAAAAARAAEAAAAGAAAAAAASAAEAAAAGAAAAAAAAAAEAAAAGAAAAAAAAAAIAAAAGAAAAAAAAAAMAAAAGAAAAAAAAAAQAAAAGAAAAAAAAAAUAAAAGAAAAAAAAAAYAAAAGAAAAAAAAAAcAAAAGAAAAAAAAAAgAAAAGAAAAAAAAAAkAAAAGAAAAAAABAAEAAAAGAAAAAAABAAIAAAAGAAAAAAABAAMAAAAGAAAAAAABAAQAAAAGAAAAAAABAAUAAAAGAAAAAAABAAYAAAAGAAAAAAABAAcAAAAGAAAAAAABAAgAAAAGAAAAAAABAAkAAAAGAAAAAAACAAEAAAAGAAAAAAACAAIAAAAGAAAAAAACAAMAAAAGAAAAAAACAAQAAAAGAAAAAAACAAUAAAAGAAAAAAACAAYAAAAGAAAAAAACAAcAAAAGAAAAAAACAAgAAAAGAAAAAAACAAkAAAAGAAAAAAADAAEAAAAGAAAAAAADAAIAAAAGAAAAAAADAAMAAAAGAAAAAAADAAQAAAAGAAAAAAADAAUAAAAGAAAAAAADAAYAAAAGAAAAAAADAAcAAAAGAAAAAAADAAgAAAAGAAAAAAADAAkAAAAGAAAAAAAEAAEAAAAGAAAAAAAEAAIAAAAGAAAAAAAEAAMAAAAGAAAAAAAEAAQAAAAGAAAAAAAEAAUAAAAGAAAAAAAEAAYAAAAGAAAAAAAEAAcAAAAGAAAAAAAEAAgAAAAGAAAAAAAEAAkAAAAGAAAAAAAFAAEAAAAGAAAAAAAFAAIAAAAGAAAAAAAFAAMAAAAGAAAAAAAFAAQAAAAGAAAAAAAFAAUAAAAGAAAAAAAFAAYAAAAGAAAAAAAFAAcAAAAGAAAAAAAFAAgAAAAGAAAAAAAFAAkAAAAGAAAAAAAGAAEAAAAGAAAAAAAGAAIAAAAGAAAAAAAGAAMAAAAGAAAAAAAGAAQAAAAGAAAAAAAGAAUAAAAGAAAAAAAGAAYAAAAGAAAAAAAGAAcAAAAGAAAAAAAGAAgAAAAGAAAAAAAGAAkAAAAGAAAAAAAHAAEAAAAGAAAAAAAHAAIAAAAGAAAAAAAHAAMAAAAGAAAAAAAHAAQAAAAGAAAAAAAHAAUAAAAGAAAAAAAHAAYAAAAGAAAAAAAHAAcAAAAGAAAAAAAHAAgAAAAGAAAAAAAHAAkAAAAGAAAAAAAIAAAAAAAGAAAAAAAIAAIAAAAGAAAAAAAIAAMAAAAGAAAAAAAIAAQAAAAGAAAAAAAIAAUAAAAGAAAAAAAIAAYAAAAGAAAAAAAIAAcAAAAGAAAAAAAIAAgAAAAGAAAAAAAIAAkAAAAGAAAAAAAJAAAAAAAGAAAAAAAJAAIAAAAGAAAAAAAJAAMAAAAGAAAAAAAJAAQAAAAGAAAAAAAJAAUAAAAGAAAAAAAJAAYAAAAGAAAAAAAJAAcAAAAGAAAAAAAJAAgAAAAGAAAAAAAJAAkAAAAGAAAAAAAKAAAAAAAGAAAAAAAKAAIAAAAGAAAAAAAKAAMAAAAGAAAAAAAKAAQAAAAGAAAAAAAKAAUAAAAGAAAAAAAKAAYAAAAGAAAAAAAKAAcAAAAGAAAAAAAKAAgAAAAGAAAAAAAKAAkAAAAGAAAAAAALAAAAAAAGAAAAAAALAAIAAAAGAAAAAAALAAMAAAAGAAAAAAALAAQAAAAGAAAAAAALAAUAAAAGAAAAAAALAAYAAAAGAAAAAAALAAcAAAAGAAAAAAALAAgAAAAGAAAAAAALAAkAAAAGAAAAAAAMAAAAAAAGAAAAAAAMAAIAAAAGAAAAAAAMAAMAAAAGAAAAAAAMAAQAAAAGAAAAAAAMAAUAAAAGAAAAAAAMAAYAAAAGAAAAAAAMAAcAAAAGAAAAAAAMAAgAAAAGAAAAAAAMAAkAAAAGAAAAAAANAAAAAAAGAAAAAAANAAIAAAAGAAAAAAANAAMAAAAGAAAAAAANAAQAAAAGAAAAAAANAAUAAAAGAAAAAAANAAYAAAAGAAAAAAANAAcAAAAGAAAAAAANAAgAAAAGAAAAAAANAAkAAAAGAAAAAAAOAAAAAAAGAAAAAAAOAAIAAAAGAAAAAAAOAAMAAAAGAAAAAAAOAAQAAAAGAAAAAAAOAAUAAAAGAAAAAAAOAAYAAAAGAAAAAAAOAAcAAAAGAAAAAAAOAAgAAAAGAAAAAAAOAAkAAAAGAAAAAAAPAAAAAAAGAAAAAAAPAAIAAAAGAAAAAAAPAAMAAAAGAAAAAAAPAAQAAAAGAAAAAAAPAAUAAAAGAAAAAAAPAAYAAAAGAAAAAAAPAAcAAAAGAAAAAAAPAAgAAAAGAAAAAAAPAAkAAAAGAAAAAAAQAAAAAAAGAAAAAAAQAAIAAAAGAAAAAAAQAAMAAAAGAAAAAAAQAAQAAAAGAAAAAAAQAAUAAAAGAAAAAAAQAAYAAAAGAAAAAAAQAAcAAAAGAAAAAAAQAAgAAAAGAAAAAAAQAAkAAAAGAAAAAAARAAAAAAAGAAAAAAARAAIAAAAGAAAAAAARAAMAAAAGAAAAAAARAAQAAAAGAAAAAAARAAUAAAAGAAAAAAARAAYAAAAGAAAAAAARAAcAAAAGAAAAAAARAAgAAAAGAAAAAAARAAkAAAAGAAAAAAASAAAAAAAGAAAAAAASAAIAAAAGAAAAAAASAAMAAAAGAAAAAAASAAQAAAAGAAAAAAASAAUAAAAGAAAAAAASAAYAAAAGAAAAAAASAAcAAAAGAAAAAAASAAgAAAAGAAAAAAASAAkAAAAGAAAAAAATAAAAAAAGAAAAAAATAAEAAAAGAAAAAAATAAIAAAAGAAAAAAATAAMAAAAGAAAAAAATAAQAAAAGAAAAAAATAAUAAAAGAAAAAAATAAYAAAAGAAAAAAATAAcAAAAGAAAAAAATAAgAAAAGAAAAAAATAAkAAAAGAAAAAAATAAoAAAAGAAAAAAATAAsAAAAGAAAAAAATAAwAAAAGAAAAAAATAA0AAAAGAAAAAAATAA4AAAAGAAAAAAATAA8AAAAGAAAAAAAUAAAAAAAGAAAAAAAUAAEAAAAGAAAAAAAUAAIAAAAGAAAAAAAUAAMAAAAGAAAAAAAUAAQAAAAGAAAAAAAUAAUAAAAGAAAAAAAUAAYAAAAGAAAAAAAUAAcAAAAGAAAAAAAUAAgAAAAGAAAAAAAUAAkAAAAGAAAAAAAUAAoAAAAGAAAAAAAUAAsAAAAGAAAAAAAUAAwAAAAGAAAAAAAUAA0AAAAGAAAAAAAUAA4AAAAGAAAAAAAUAA8AAAAGAAAAAAAVAAAAAAAGAAAAAAAVAAEAAAAGAAAAAAAVAAIAAAAGAAAAAAAVAAMAAAAGAAAAAAAVAAQAAAAGAAAAAAAVAAUAAAAGAAAAAAAVAAYAAAAGAAAAAAAVAAcAAAAGAAAAAAAVAAgAAAAGAAAAAAAVAAkAAAAGAAAAAAAVAAoAAAAGAAAAAAAVAAsAAAAGAAAAAAAVAAwAAAAGAAAAAAAVAA0AAAAGAAAAAAAVAA4AAAAGAAAAAAAVAA8AAAAGAAAAAAAWAAAAAAAGAAAAAAAWAAEAAAAGAAAAAAAWAAIAAAAGAAAAAAAWAAMAAAAGAAAAAAAWAAQAAAAGAAAAAAAWAAUAAAAGAAAAAAAWAAYAAAAGAAAAAAAWAAcAAAAGAAAAAAAWAAgAAAAGAAAAAAAWAAkAAAAGAAAAAAAWAAoAAAAGAAAAAAAWAAsAAAAGAAAAAAAWAAwAAAAGAAAAAAAWAA0AAAAGAAAAAAAWAA4AAAAGAAAAAAAWAA8AAAAGAAAAAAAXAAAAAAAGAAAAAAAXAAEAAAAGAAAAAAAXAAIAAAAGAAAAAAAXAAMAAAAGAAAAAAAXAAQAAAAGAAAAAAAXAAUAAAAGAAAAAAAXAAYAAAAGAAAAAAAXAAcAAAAGAAAAAAAXAAgAAAAGAAAAAAAXAAkAAAAGAAAAAAAXAAoAAAAGAAAAAAAXAAsAAAAGAAAAAAAXAAwAAAAGAAAAAAAXAA0AAAAGAAAAAAAXAA4AAAAGAAAAAAAXAA8AAAAGAAAAAAAYAAAAAAAGAAAAAAAYAAEAAAAGAAAAAAAYAAIAAAAGAAAAAAAYAAMAAAAGAAAAAAAYAAQAAAAGAAAAAAAYAAUAAAAGAAAAAAAYAAYAAAAGAAAAAAAYAAcAAAAGAAAAAAAYAAgAAAAGAAAAAAAYAAkAAAAGAAAAAAAYAAoAAAAGAAAAAAAYAAsAAAAGAAAAAAAYAAwAAAAGAAAAAAAYAA0AAAAGAAAAAAAYAA4AAAAGAAAAAAAYAA8AAAAGAAAAAAAZAAAAAAAGAAAAAAAZAAEAAAAGAAAAAAAZAAIAAAAGAAAAAAAZAAMAAAAGAAAAAAAZAAQAAAAGAAAAAAAZAAUAAAAGAAAAAAAZAAYAAAAGAAAAAAAZAAcAAAAGAAAAAAAZAAgAAAAGAAAAAAAZAAkAAAAGAAAAAAAZAAoAAAAGAAAAAAAZAAsAAAAGAAAAAAAZAAwAAAAGAAAAAAAZAA0AAAAGAAAAAAAZAA4AAAAGAAAAAAAZAA8AAAAGAAAAAAAaAAAAAAAGAAAAAAAaAAEAAAAGAAAAAAAaAAIAAAAGAAAAAAAaAAMAAAAGAAAAAAAaAAQAAAAGAAAAAAAaAAUAAAAGAAAAAAAaAAYAAAAGAAAAAAAaAAcAAAAGAAAAAAAaAAgAAAAGAAAAAAAaAAkAAAAGAAAAAAAaAAoAAAAGAAAAAAAaAAsAAAAGAAAAAAAaAAwAAAAGAAAAAAAaAA0AAAAGAAAAAAAaAA4AAAAGAAAAAAAaAA8AAAAGAAAAAAAbAAAAAAAGAAAAAAAbAAEAAAAGAAAAAAAbAAIAAAAGAAAAAAAbAAMAAAAGAAAAAAAbAAQAAAAGAAAAAAAbAAUAAAAGAAAAAAAbAAYAAAAGAAAAAAAbAAcAAAAGAAAAAAAbAAgAAAAGAAAAAAAbAAkAAAAGAAAAAAAbAAoAAAAGAAAAAAAbAAsAAAAGAAAAAAAbAAwAAAAGAAAAAAAbAA0AAAAGAAAAAAAbAA4AAAAGAAAAAAAbAA8AAAAGAAAAAAAAAAoAAAAGAAAAAAAAAAsAAAAGAAAAAAAAAAwAAAAGAAAAAAAAAA0AAAAGAAAAAAAAAA4AAAAGAAAAAAAAAA8AAAAGAAAAAAABAAoAAAAGAAAAAAABAAsAAAAGAAAAAAABAAwAAAAGAAAAAAABAA0AAAAGAAAAAAABAA4AAAAGAAAAAAABAA8AAAAGAAAAAAACAAoAAAAGAAAAAAACAAsAAAAGAAAAAAACAAwAAAAGAAAAAAACAA0AAAAGAAAAAAACAA4AAAAGAAAAAAACAA8AAAAGAAAAAAADAAoAAAAGAAAAAAADAAsAAAAGAAAAAAADAAwAAAAGAAAAAAADAA0AAAAGAAAAAAADAA4AAAAGAAAAAAADAA8AAAAGAAAAAAAEAAoAAAAGAAAAAAAEAAsAAAAGAAAAAAAEAAwAAAAGAAAAAAAEAA0AAAAGAAAAAAAEAA4AAAAGAAAAAAAEAA8AAAAGAAAAAAAFAAoAAAAGAAAAAAAFAAsAAAAGAAAAAAAFAAwAAAAGAAAAAAAFAA0AAAAGAAAAAAAFAA4AAAAGAAAAAAAFAA8AAAAGAAAAAAAGAAoAAAAGAAAAAAAGAAsAAAAGAAAAAAAGAAwAAAAGAAAAAAAGAA0AAAAGAAAAAAAGAA4AAAAGAAAAAAAGAA8AAAAGAAAAAAAHAAoAAAAGAAAAAAAHAAsAAAAGAAAAAAAHAAwAAAAGAAAAAAAHAA0AAAAGAAAAAAAHAA4AAAAGAAAAAAAHAA8AAAAGAAAAAAAIAAoAAAAGAAAAAAAIAAsAAAAGAAAAAAAIAAwAAAAGAAAAAAAIAA0AAAAGAAAAAAAIAA4AAAAGAAAAAAAIAA8AAAAGAAAAAAAJAAoAAAAGAAAAAAAJAAsAAAAGAAAAAAAJAAwAAAAGAAAAAAAJAA0AAAAGAAAAAAAJAA4AAAAGAAAAAAAJAA8AAAAGAAAAAAAKAAoAAAAGAAAAAAAKAAsAAAAGAAAAAAAKAAwAAAAGAAAAAAAKAA0AAAAGAAAAAAAKAA4AAAAGAAAAAAAKAA8AAAAGAAAAAAALAAoAAAAGAAAAAAALAAsAAAAGAAAAAAALAAwAAAAGAAAAAAALAA0AAAAGAAAAAAALAA4AAAAGAAAAAAALAA8AAAAGAAAAAAAMAAoAAAAGAAAAAAAMAAsAAAAGAAAAAAAMAAwAAAAGAAAAAAAMAA0AAAAGAAAAAAAMAA4AAAAGAAAAAAAMAA8AAAAGAAAAAAANAAoAAAAGAAAAAAANAAsAAAAGAAAAAAANAAwAAAAGAAAAAAANAA0AAAAGAAAAAAANAA4AAAAGAAAAAAANAA8AAAAGAAAAAAAOAAoAAAAGAAAAAAAOAAsAAAAGAAAAAAAOAAwAAAAGAAAAAAAOAA0AAAAGAAAAAAAOAA4AAAAGAAAAAAAOAA8AAAAGAAAAAAAPAAoAAAAGAAAAAAAPAAsAAAAGAAAAAAAPAAwAAAAGAAAAAAAPAA0AAAAGAAAAAAAPAA4AAAAGAAAAAAAPAA8AAAAGAAAAAAAQAAoAAAAGAAAAAAAQAAsAAAAGAAAAAAAQAAwAAAAGAAAAAAAQAA0AAAAGAAAAAAAQAA4AAAAGAAAAAAAQAA8AAAAGAAAAAAARAAoAAAAGAAAAAAARAAsAAAAGAAAAAAARAAwAAAAGAAAAAAARAA0AAAAGAAAAAAARAA4AAAAGAAAAAAARAA8AAAAGAAAAAAASAAoAAAAGAAAAAAASAAsAAAAGAAAAAAASAAwAAAAGAAAAAAASAA0AAAAGAAAAAAASAA4AAAAGAAAAAAASAA8AAAAGAAAAAAA=")
tile_set = SubResource("TileSet_1sggn")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1667, 469)
scale = Vector2(10, 10)
texture = ExtResource("3_kv8mn")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(255, 469)
scale = Vector2(10, 10)
texture = ExtResource("3_kv8mn")
flip_h = true

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 1025.0
offset_top = 538.0
offset_right = 1065.0
offset_bottom = 578.0
scale = Vector2(3, 3)

[node name="back_button" type="Button" parent="Control"]
layout_mode = 0
offset_left = -317.333
offset_top = -166.0
offset_right = -263.333
offset_bottom = -126.0
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 30
text = "back"

[node name="Reset_Score" type="Button" parent="Control"]
layout_mode = 0
offset_left = 155.0
offset_top = -166.0
offset_right = 274.0
offset_bottom = -126.0
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 30
text = "reset score"

[node name="buttons" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -122.667
offset_right = 95.0
offset_bottom = 53.3332
grow_horizontal = 2
grow_vertical = 2

[node name="story" type="Button" parent="Control/buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 60
text = "Story
"

[node name="credits" type="Button" parent="Control/buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 60
text = "Credits"

[node name="how_to_play" type="Button" parent="Control/buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 60
text = "How to play"

[node name="menus" type="Control" parent="."]
anchors_preset = 0
offset_left = 188.0
offset_top = 103.0
offset_right = 228.0
offset_bottom = 143.0

[node name="how_to_play_menu" type="ColorRect" parent="menus"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 225.0
offset_top = 28.0
offset_right = 1392.0
offset_bottom = 766.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)
color = Color(0.198456, 0.144673, 0.255072, 1)

[node name="TextureRect" type="TextureRect" parent="menus/how_to_play_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -335.0
offset_right = 540.0
offset_bottom = 335.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_qfjae")

[node name="how_to_play_back_button" type="Button" parent="menus/how_to_play_menu"]
layout_mode = 0
offset_left = 60.0
offset_top = 47.7778
offset_right = 99.0
offset_bottom = 78.7778
scale = Vector2(2.5, 2.5)
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 26
text = "back"

[node name="credits_menu" type="ColorRect" parent="menus"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 225.0
offset_top = 28.0
offset_right = 1392.0
offset_bottom = 766.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)
color = Color(0.2, 0.145098, 0.254902, 1)

[node name="TextureRect" type="TextureRect" parent="menus/credits_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -335.0
offset_right = 540.0
offset_bottom = 335.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_y7lp4")

[node name="credits_back_button" type="Button" parent="menus/credits_menu"]
layout_mode = 0
offset_left = 60.0
offset_top = 47.7778
offset_right = 99.0
offset_bottom = 78.7778
scale = Vector2(2.5, 2.5)
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 26
text = "back"

[node name="Label" type="Label" parent="menus/credits_menu"]
layout_mode = 0
offset_left = 60.0
offset_top = 624.445
offset_right = 1161.0
offset_bottom = 735.445
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 43
text = " Daleonfire - Mrthenoronh - Ricniclas - Floraphonic - Driken 5482"

[node name="Label" type="Label" parent="menus/credits_menu/Label"]
layout_mode = 0
offset_left = 244.444
offset_top = -55.5556
offset_right = 785.444
offset_bottom = -6.55556
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 52
text = "Additional Sound effects By:"

[node name="story_menu" type="ColorRect" parent="menus"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 225.0
offset_top = 28.0
offset_right = 1392.0
offset_bottom = 766.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)
color = Color(0.2, 0.145098, 0.254902, 1)

[node name="TextureRect" type="TextureRect" parent="menus/story_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -335.0
offset_right = 540.0
offset_bottom = 335.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_obcvb")

[node name="story_back_button" type="Button" parent="menus/story_menu"]
layout_mode = 0
offset_left = 60.0
offset_top = 47.7778
offset_right = 99.0
offset_bottom = 78.7778
scale = Vector2(2.5, 2.5)
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 26
text = "back"

[node name="reset_menu" type="ColorRect" parent="menus"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 225.0
offset_top = 28.0
offset_right = 1392.0
offset_bottom = 766.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)
color = Color(0.2, 0.145098, 0.254902, 1)

[node name="ColorRect" type="ColorRect" parent="menus/reset_menu"]
layout_mode = 0
offset_left = 43.5
offset_top = 34.0
offset_right = 1123.5
offset_bottom = 704.0
color = Color(0.384314, 0.317647, 0.47451, 1)

[node name="Label" type="Label" parent="menus/reset_menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -294.5
offset_top = 100.0
offset_right = 294.5
offset_bottom = 196.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 120
text = "Are you sure?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="menus/reset_menu"]
layout_mode = 0
offset_left = 43.5
offset_top = 400.0
offset_right = 1123.5
offset_bottom = 600.0
theme_override_constants/separation = 200
alignment = 1

[node name="Confirm" type="Button" parent="menus/reset_menu/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 80
text = "Confirm"

[node name="Cancel" type="Button" parent="menus/reset_menu/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 100
text = "Cancel"

[node name="reset_feedback" type="Label" parent="menus"]
visible = false
layout_mode = 0
offset_left = 359.0
offset_top = -50.0
offset_right = 1186.0
offset_bottom = 54.0
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 130
text = "High scores reset!"

[node name="high_score_label" type="Label" parent="menus"]
layout_mode = 0
offset_left = 290.0
offset_top = 745.0
offset_right = 1256.0
offset_bottom = 817.0
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 90
text = "Current High Score: N/A"
horizontal_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_y7lp4")
pitch_scale = 1.19
autoplay = true

[connection signal="pressed" from="Control/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Control/Reset_Score" to="." method="_on_reset_scores_pressed"]
[connection signal="pressed" from="Control/buttons/story" to="." method="_on_story_pressed"]
[connection signal="pressed" from="Control/buttons/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Control/buttons/how_to_play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="menus/how_to_play_menu/how_to_play_back_button" to="." method="_on_how_to_play_back_button_pressed"]
[connection signal="pressed" from="menus/credits_menu/credits_back_button" to="." method="_on_credits_back_button_pressed"]
[connection signal="pressed" from="menus/story_menu/story_back_button" to="." method="_on_story_back_button_pressed"]
[connection signal="pressed" from="menus/reset_menu/HBoxContainer/Confirm" to="." method="_on_reset_confirmed_pressed"]
[connection signal="pressed" from="menus/reset_menu/HBoxContainer/Cancel" to="." method="_on_reset_cancel_pressed"]
